--- a/fediland-website/index.html
+++ b/fediland-website/index.html
@@ -2,28 +2,43 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>A Basic HTML5 Template</title>
-  <meta name="description" content="A simple HTML5 Template for new projects.">
-  <meta name="author" content="SitePoint">
+<title>Fediland.org</title>
+<meta name="description" content="Fediland.org website">
+<meta name="author" content="Fediland">
 
-  <meta property="og:title" content="A Basic HTML5 Template">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-  <meta property="og:description" content="A simple HTML5 Template for new projects.">
-  <meta property="og:image" content="image.png">
+<meta property="og:title" content="fediland.org">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.fediland.org/">
+<meta property="og:description" content="fediland.org website">
 
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+<!--
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="/favicon.svg" type="image/svg+xml">
+<link rel="stylesheet" href="css/styles.css?v=1.0">
+-->
 
 </head>
 
 <body>
-    <img src="img/logo-fediland.png" alt="Logo of Fediland">
+
+<style>
+    img {
+        height: auto;
+        max-width: 100%;
+    }
+    .background {
+        height: 405px;
+        width: 720px;
+        margin: auto;
+        border: solid 2px grey;
+    }
+</style>
+
+    <div class="background">
+        <img src="img/logo-fediland.png" alt="Logo of Fediland.org" >
+    </div>
 </body>
 </html>
